@@ -199,7 +199,7 @@ FIELD		|httptestid	|t_id		|	|NOT NULL	|ZBX_PROXY		|1|httptest
 FIELD		|name		|t_varchar(64)	|''	|NOT NULL	|ZBX_PROXY
 FIELD		|no		|t_integer	|'0'	|NOT NULL	|ZBX_PROXY
 FIELD		|url		|t_varchar(255)	|''	|NOT NULL	|ZBX_PROXY
-FIELD		|timeout	|t_integer	|'30'	|NOT NULL	|ZBX_PROXY
+FIELD		|timeout	|t_integer	|'15'	|NOT NULL	|ZBX_PROXY
 FIELD		|posts		|t_shorttext	|''	|NOT NULL	|ZBX_PROXY
 FIELD		|required	|t_varchar(255)	|''	|NOT NULL	|ZBX_PROXY
 FIELD		|status_codes	|t_varchar(255)	|''	|NOT NULL	|ZBX_PROXY
@@ -1267,4 +1267,4 @@ INDEX		|1		|itemid
 TABLE|dbversion||
 FIELD		|mandatory	|t_integer	|'0'	|NOT NULL	|
 FIELD		|optional	|t_integer	|'0'	|NOT NULL	|
-ROW		|2030091	|2030091
+ROW		|2030092	|2030092
